[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
  "channels==4.3.2",
  "channels-redis==4.3",
  "django[argon2]==5.2.11",
  "django-allauth[mfa]==65.14.1",
  "django-bootstrap5==26.1",
  "django-cleanup==9",
  "django-environ==0.12",
  "django-filter==25.2",
  "django-htmx==1.27.0",
  "django-logentry-admin==1.1",
  "django-ninja==1.5.3",
  "django-stubs-ext==5.2.2",
  "docutils==0.22.4",
  "granian==2.7.0",
  "orjson==3.11.7",
  "pillow==12.1.0",
  "psycopg[pool]==3.3.2",
  "sentry-sdk[django]==2.52.0",
  "socnet-rs",
  "uvloop==0.22.1; implementation_name=='cpython' and (sys_platform=='darwin' or sys_platform=='linux')",
]
optional-dependencies.local = [
  "covdefaults==2.3",
  "debugpy==1.8.20",
  "django-coverage-plugin==3.2.0",
  "django-debug-toolbar==6.2.0",
  "factory-boy==3.3.3",
  "psycopg[binary]==3.3.2",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "pytest-django==4.11.1",
  "pytest-github-actions-annotate-failures==0.3",
  "watchfiles==1.1.1",
]
optional-dependencies.production = [
  "psycopg[c]==3.3.2",
  "redis[hiredis]==7.1.0",
]

[dependency-groups]
dev = [
  "django-stubs==5.2.2",
  "djlint==1.36.4",
  "mypy[faster-cache]==1.19.0",
  "ruff==0.15.0",
  "types-pillow==10.2.0.20240822",
]

[tool.uv]
package = false

[tool.uv.sources]
socnet-rs = { path = "socnet_rs", editable = false }
