[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
  "channels==4.3.2",
  "channels-redis==4.3",
  "django-allauth[mfa]==65.16.1",
  "django-bootstrap5==26.2",
  "django-cleanup==9",
  "django-environ==0.13.0",
  "django-filter==25.2",
  "django-htmx==1.27.0",
  "django-logentry-admin==1.1",
  "django-ninja==1.6.2",
  "django-stubs-ext==6.0.3",
  "django[argon2]==6.0.4",
  "docutils==0.22.4",
  "granian==2.7.4",
  "orjson==3.11.8",
  "pillow==12.2.0",
  "psycopg[pool]==3.3.3",
  "sentry-sdk[django]==2.58.0",
  "socnet-rs",
  "uvloop==0.22.1; implementation_name=='cpython' and (sys_platform=='darwin' or sys_platform=='linux')",
]
optional-dependencies.local = [
  "covdefaults==2.3",
  "debugpy==1.8.20",
  "django-coverage-plugin==3.2.2",
  "django-debug-toolbar==6.3.0",
  "factory-boy==3.3.3",
  "psycopg[binary]==3.3.3",
  "pytest==9.0.3",
  "pytest-cov==7.1.0",
  "pytest-django==4.12.0",
  "pytest-github-actions-annotate-failures==0.4.0",
  "watchfiles==1.1.1",
]
optional-dependencies.production = [
  "psycopg[c]==3.3.3",
  "redis[hiredis]==7.4.0",
]

[dependency-groups]
dev = [
  "django-stubs==6.0.3",
  "djlint==1.36.4",
  "mypy==1.20.2",
  "ruff==0.15.12",
  "types-pillow==10.2.0.20240822",
]

[tool.uv]
package = false

[tool.uv.sources]
socnet-rs = { path = "socnet_rs", editable = false }
