[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
  "channels==4.3.2",
  "channels-redis==4.3",
  "django-allauth[mfa]==65.18.0",
  "django-bootstrap5==26.2",
  "django-cleanup==9",
  "django-environ==0.14.0",
  "django-filter==25.2",
  "django-htmx==1.27.0",
  "django-logentry-admin==1.1",
  "django-ninja==1.6.2",
  "django-stubs-ext==6.0.6",
  "django[argon2]==6.0.7",
  "docutils==0.23",
  "granian==2.7.9",
  "orjson==3.11.9",
  "pillow==12.3.0",
  "psycopg[pool]==3.3.4",
  "sentry-sdk[django]==2.64.0",
  "socnet-rs",
  "uvloop==0.22.1; implementation_name=='cpython' and (sys_platform=='darwin' or sys_platform=='linux')",
]
optional-dependencies.local = [
  "covdefaults==2.3",
  "debugpy==1.8.21",
  "django-coverage-plugin==3.2.2",
  "django-debug-toolbar==7.0.0",
  "factory-boy==3.3.3",
  "psycopg[binary]==3.3.4",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "pytest-django==4.12.0",
  "pytest-github-actions-annotate-failures==0.4.2",
  "watchfiles==1.2.0",
]
optional-dependencies.production = [
  "psycopg[c]==3.3.4",
  "redis[hiredis]==8.0.1",
]

[dependency-groups]
dev = [
  "django-stubs==6.0.6",
  "djlint==1.40.3",
  "mypy==2.1.0",
  "ruff==0.15.20",
  "types-pillow==10.2.0.20240822",
]

[tool.uv]
exclude-newer = "3 days"
package = false

[tool.uv.sources]
socnet-rs = { path = "socnet_rs", editable = false }
