[package]
name = "socnet-rs"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]
name = "socnet_rs"

[dependencies]
ammonia = "=4.1.2"
compact_str = "=0.9.0"
pulldown-cmark = { version = "=0.13.1", default-features = false, features = [
  "html",
  "simd",
] }
pyo3 = "=0.28.2"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
