[package]
name = "socnet-rs"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]
name = "socnet_rs"

[dependencies]
ammonia = "=4.1.3"
compact_str = { version = "=0.10.0", features = ["pyo3"] }
pulldown-cmark = {
  version = "=0.13.3",
  default-features = false,
  features = [
    "html",
    "simd",
  ]
}
pyo3 = "=0.29.0"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
