[project]
name = "socnet-rs"
version = "0.1.0"
requires-python = ">=3.14,<3.15"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "src/**/*.rs" },
  { file = "Cargo.toml" },
  { file = "Cargo.lock" },
]
exclude-newer = "3 days"
